# emulator

./: .clang-format  CMakeLists.txt  README.md
bins/: CMakeLists.txt
bins/compiler/: CMakeLists.txt
bins/compiler/include/compiler/: assembler.h  ast.h  disassembler.h  lexer.h  parser.h  range.h  token.h  token_iterator.h  token_type.h
bins/compiler/src/: assembler.cpp  ast.cpp  compiler.cpp  disassembler.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp  token_type.cpp
bins/ec/: CMakeLists.txt
bins/ec/src/: ec.cpp
bins/test_compiler/: CMakeLists.txt
bins/test_compiler/src/: test_compiler.cpp
bins/virtual_machine/: CMakeLists.txt
bins/virtual_machine/include/virtual_machine/: graphics_mode.h
bins/virtual_machine/src/: graphics_mode.cpp  virtual_machine.cpp  virtual_machine_win32.cpp  virtual_machine_x11.cpp
cmake/: utils.cmake
libs/: CMakeLists.txt
libs/assembler/: CMakeLists.txt
libs/assembler/include/assembler/: assembler.h  disassembler.h
libs/assembler/src/: assembler.cpp  disassembler.cpp
libs/base/: CMakeLists.txt
libs/base/include/base/: data.h  object_pool.h  platform.h
libs/compiler/: CMakeLists.txt
libs/compiler/include/compiler/: parser.h
libs/compiler/src/: compiler.cpp  parser.cpp
libs/emulator/: CMakeLists.txt
libs/emulator/include/emulator/: bus.h  cpu.h  memory.h  op_codes.h  registers.h  vm.h
libs/emulator/src/: bus.cpp  cpu.cpp  memory.cpp  op_codes.cpp  registers.cpp  vm.cpp
libs/include/: cpu.h  op_codes.h  platform.h
libs/src/: cpu.cpp  main.cpp  op_codes.cpp
libs/vm/: CMakeLists.txt
libs/vm/include/vm/: cpu.h  emulator.h  instruction.h  memory.h  object_pool.h  op_codes.h  platform.h  registers.h
libs/vm/include/vm/assembler/: assembler.h  disassembler.h
libs/vm/include/vm/compiler/: compiler.h  parser.h
libs/vm/include/vm/emulator/: address.h  bus.h  cpu.h  emulator.h  instruction.h  memory.h  op_codes.h  registers.h
libs/vm/src/: cpu.cpp  emulator.cpp  instruction.cpp  memory.cpp  op_codes.cpp  registers.cpp
libs/vm/src/assembler/: assembler.cpp  disassembler.cpp
libs/vm/src/compiler/: parser.cpp
libs/vm/src/emulator/: bus.cpp  cpu.cpp  emulator.cpp  memory.cpp  op_codes.cpp  registers.cpp
libs/vm/tests/: address_tests.cpp
libs/vm/tests/emulator/: cpu_tests.cpp
